testdata/invalidwiki/Испорченный content/__page.opt
[General]
tags = test, тест
type = unknown
datetime = 2017-02-28 13:53:27.966896

